--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>ToDo App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -17,16 +18,22 @@
         </div>
         <div class="row">
             <div class="col-md-4 border">
-                <h2>ToDo Lists</h2>
-                <div class="todo-list-section-header">
-                    <form id="form-todo-lists" action="" class="">
-                        <input type="button" value="+" class="border-end-0 rounded-start m-0 form-submit-btn">
-                        <input type="text" id="todo-list-input" class="rounded-end form-label m-0" name="todo-list" placeholder="New ToDo List">
-                    </form>
+                <div class="list-header-area d-flex justify-content-center">
+                    <h2 class="mx-2">ToDo Lists</h2>
+                    <button class="btn btn-sm btn-secondary mx-2" id="hide-button" onclick="hideElement()"><i class="bi bi-list"></i></button>
                 </div>
-                <ul class="list-group py-2" id="todo-lists-container" onchange="return drawTodoItems()">
-                    <!-- ToDo Lists will be generated here as list items -->
-                </ul>
+                <div id="list-section-container">
+                    <div class="todo-list-section-header">
+                        <form id="form-todo-lists" action="" class="">
+                            <input type="button" value="+" class="border-end-0 rounded-start m-0 form-submit-btn">
+                            <input type="text" id="todo-list-input" class="rounded-end form-label m-0" name="todo-list"
+                                placeholder="New ToDo List">
+                        </form>
+                    </div>
+                    <ul class="list-group py-2" id="todo-lists-container" onchange="return drawTodoItems()">
+                        <!-- ToDo Lists will be generated here as list items -->
+                    </ul>
+                </div>
             </div>
             <div class="col-md-8 border">
                 <h2>ToDo Items</h2>
@@ -35,7 +42,6 @@
                         <input type="submit" value="+" class="border-end-0 rounded-start m-0 form-submit-btn">
                         <input id="todo-item-input" type="text" class="rounded-end form-label m-0" name="todo-item"
                             placeholder="Add ToDo Item"><span id="incorrect-entry"></span>
-                        <input type="hidden" id="selected-list" value="123456">
                     </form>
                     <div class="btn-group-sm" role="group" onchange="return drawTodoItems()">
                         <input type="radio" class="btn-check" name="filter" id="filter-all-tasks" checked>
