--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-md-4 border">
                 <div class="list-header-area d-flex justify-content-center">
                     <h2 class="mx-2">ToDo Lists</h2>
-                    <button class="btn btn-sm btn-secondary mx-2" id="hide-button" onclick="hideElement()"><i class="bi bi-list"></i></button>
+                    <button class="btn btn-sm border mx-2" id="hide-button" onclick="hideElement()"><i class="bi bi-x" id="toggle-button-icon"></i></button>
                 </div>
                 <div id="list-section-container">
                     <div class="todo-list-section-header">
